force-app/main/default/objects/Readmission_Report_Access__c/Readmission_Report_Access__c.object-meta.xml
<CustomObject>
    <description>One row per thing that happened on a readmission report link at the report site: a code sent, a wrong code, a lockout, an open, a download, a refusal. Carries the caller&apos;s IP address and browser, so a disclosure can be traced to a device as well as to a mailbox. Written by the site in system mode; staff read it from the link record.</description>
    <label>Readmission Report Access</label>
    <nameField>
        <displayFormat>RRA-{00000000}</displayFormat>
        <label>Access Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Readmission Report Accesses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>