force-app/main/default/objects/Readmission_Report_Access__c/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <description>A short note, such as attempts left or the reason a fetch was refused. Never a code, never a token.</description>
    <label>Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>