force-app/main/default/objects/Readmission_Report_Access__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Code sent</fullName>
            </value>
            <value>
                <fullName>Code throttled</fullName>
            </value>
            <value>
                <fullName>Code refused</fullName>
            </value>
            <value>
                <fullName>Wrong code</fullName>
            </value>
            <value>
                <fullName>Code expired</fullName>
            </value>
            <value>
                <fullName>Locked</fullName>
            </value>
            <value>
                <fullName>Opened</fullName>
            </value>
            <value>
                <fullName>View limit reached</fullName>
            </value>
            <value>
                <fullName>PDF fetched</fullName>
            </value>
            <value>
                <fullName>Downloaded</fullName>
            </value>
            <value>
                <fullName>Fetch refused</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>