force-app/main/default/objects/Readmission_Report_Access__c/fields/IP_Address__c.field-meta.xml
<CustomField>
    <fullName>IP_Address__c</fullName>
    <description>Caller IP as seen by Salesforce Sites (X-Salesforce-SIP), falling back to True-Client-IP or the first X-Forwarded-For hop.</description>
    <label>IP Address</label>
    <length>45</length>
    <type>Text</type>
</CustomField>