force-app/main/default/objects/Readmission_Report_Access__c/fields/Occurred_At__c.field-meta.xml
<CustomField>
    <fullName>Occurred_At__c</fullName>
    <description>When it happened, as recorded by the site.</description>
    <label>Occurred At</label>
    <type>DateTime</type>
</CustomField>