force-app/main/default/objects/Readmission_Report_Access__c/fields/Report_Link__c.field-meta.xml
<CustomField>
    <fullName>Report_Link__c</fullName>
    <label>Report Link</label>
    <referenceTo>Readmission_Report_Link__c</referenceTo>
    <relationshipLabel>Access Log</relationshipLabel>
    <relationshipName>Access_Log</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>