force-app/main/default/objects/Readmission_Report_Access__c/fields/User_Agent__c.field-meta.xml
<CustomField>
    <fullName>User_Agent__c</fullName>
    <description>The browser or client that made the request, truncated to 255 characters.</description>
    <label>User Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>